[package]
name = "veilid-storage-piper"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
brotli = { version = "6.0.0", features = ["std", "simd"] }
fast-smaz = "0.1.0"
infer = "0.16.0"

# Dependencies for anything other than wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "io-util",
] }
veilid-core = { git = "https://gitlab.com/debanjanbasu/veilid.git", branch = "main" }

# Dependencies for wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
veilid-core = { git = "https://gitlab.com/debanjanbasu/veilid.git", branch = "main", default-features = false, features = [
    "default-wasm",
] }
